--- a/src/main/webapp/static/index.html
+++ b/src/main/webapp/static/index.html
@@ -6,15 +6,15 @@
 </head>
 <body>
 <div>
-    <input type="text" id="phone" name="phone">
-    <input type="text" id="customerId" name="customerId">
-    <input type="button" id="btn" name="btn" value="query">
+    电话号码：<input type="text" id="phone" name="phone">
+    cusotmerId：<input type="text" id="customerId" name="customerId">
+    <input type="button" id="btn" name="btn" value="查询单个用户">
 </div>
 <div>
+    customerId逗号分隔：
     <textarea id="customerIds" name="customerIds">
-
     </textarea>
-    <input type="button" id="checkbtn" name="checkbtn" value="query">
+    <input type="button" id="checkbtn" name="checkbtn" value="查vip问题">
 </div>
     <div >
         <p id="info"></p>
