--- a/src/main/webapp/static/modelAllList.html
+++ b/src/main/webapp/static/modelAllList.html
@@ -27,12 +27,11 @@
                 </button>
                 <a class="navbar-brand" href="javascript:void(true)">长沙水泵厂</a>
             </div>
-            <!--<div id="navbar" class="collapse navbar-collapse">-->
-                <!--<ul class="nav navbar-nav">-->
-                    <!--<li class="active"><a href="javascript:void(true)">流水</a></li>-->
-                    <!--<li><a href="./report_overview.html">报表</a></li>-->
-                <!--</ul>-->
-            <!--</div>-->
+            <div id="navbar" class="navbar-collapse collapse">
+                <ul class="nav navbar-nav navbar-right">
+                    <li><a href="javascript:logout()">登出</a></li>
+                </ul>
+            </div>
         </div>
     </nav>
     <!--<div class="container-fluid">-->
