--- a/src/main/webapp/static/redirect.html
+++ b/src/main/webapp/static/redirect.html
@@ -11,7 +11,7 @@
         var basePath = location[0]+"//"+location[2]+"/"+location[3]+"/";
         return basePath;
     };
-    window.location.href= basepath() + "static/titleList.html";
+    window.location.href= basepath() + "static/modelAllList.html";
 </script>
 </body>
 </html>
