--- a/src/main/webapp/static/login.html
+++ b/src/main/webapp/static/login.html
@@ -156,7 +156,7 @@
     var redirect = function() {
         var redirectUrl = getRequestParams("redirect");
         if (redirectUrl) window.location.href = redirectUrl;
-        else window.location.href='modelAllList.html';
+        else window.location.href= urls.index;
     }
 </script>
 
