--- a/src/main/webapp/static/modelAllList.html
+++ b/src/main/webapp/static/modelAllList.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <title>模具总表信息</title>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-    <title>模具总表信息</title>
     <link href="tools/ligerUI/ligerUI/skins/Aqua/css/ligerui-all.css" rel="stylesheet" type="text/css" />
     <link href="tools/ligerUI/ligerUI/skins/ligerui-icons.css" rel="stylesheet" type="text/css" />
     <script src="js/jquery-3.1.1.min.js"></script>
@@ -157,6 +157,8 @@
             })
         }
         var showDetail = function(modelId) {
+//            tab.addTabItem({"tabid": id, "text": text, "url": "modelDetailList.html?modelId=" + modelId})
+            parent.f_addTab("添加模具", "添加模具", "modelDetailList.html?modelId=" + modelId);
         }
         var del = function(modelId) {
             if (!modelId || modelId <= 0) {
